namespace ParkingBuildingManagement.Api.Models;

public class SystemConfig
{
    public string ConfigKey { get; set; } = string.Empty;
    public string ConfigValue { get; set; } = string.Empty;
    public string? Description { get; set; }
}
